# aeson-sum-decoding-example

./: README.md  aeson-sum-decoding-example.cabal
app/: Main.hs
src/: Lib.hs
